src/tests/snapshots/cendol__tests__semantic_const_nested__tests__nested_const_pointer.snap
---
source: src/tests/semantic_const_nested.rs
expression: output
---
Diagnostics count: 1

Level: Error
Message: cannot assign to read-only location
Span: SourceSpan(source_id=SourceId(2), start=104, end=111)
