src/tests/snapshots/cendol__tests__semantic_const_nested__tests__nested_qualifier_preservation.snap
---
source: src/tests/semantic_const_nested.rs
expression: output
---
Diagnostics count: 2

Level: Error
Message: cannot assign to read-only location
Span: SourceSpan(source_id=SourceId(2), start=111, end=118)

Level: Error
Message: cannot assign to read-only location
Span: SourceSpan(source_id=SourceId(2), start=170, end=175)
